new date and time pickers

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.16",
     "@angular/cdk": "^20.2.14",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
@@ -30,6 +31,18 @@
     "@angular/material": "^20.2.14",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@progress/kendo-angular-buttons": "^23.0.1",
+    "@progress/kendo-angular-common": "^23.0.1",
+    "@progress/kendo-angular-dateinputs": "^23.0.1",
+    "@progress/kendo-angular-icons": "^23.0.1",
+    "@progress/kendo-angular-intl": "^23.0.1",
+    "@progress/kendo-angular-l10n": "^23.0.1",
+    "@progress/kendo-angular-navigation": "^23.0.1",
+    "@progress/kendo-angular-popup": "^23.0.1",
+    "@progress/kendo-angular-utils": "^23.0.1",
+    "@progress/kendo-date-math": "^1.5.15",
+    "@progress/kendo-licensing": "^1.10.1",
+    "@progress/kendo-theme-default": "^13.0.1",
     "chart.js": "^4.5.1",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
