--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
               }
             ],
             "styles": [
+              "node_modules/@progress/kendo-theme-default/dist/all.css",
               "src/styles.css"
             ]
           },
@@ -30,8 +31,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2MB",
+                  "maximumError": "3MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -75,6 +76,7 @@
               }
             ],
             "styles": [
+              "node_modules/@progress/kendo-theme-default/dist/all.css",
               "src/styles.css"
             ]
           }
