all configurations solved for new date and time pickers

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,9 @@
             "styles": [
               "node_modules/@progress/kendo-theme-default/dist/all.css",
               "src/styles.css"
+            ],
+            "polyfills": [
+              "@angular/localize/init"
             ]
           },
           "configurations": {
@@ -78,6 +81,9 @@
             "styles": [
               "node_modules/@progress/kendo-theme-default/dist/all.css",
               "src/styles.css"
+            ],
+            "polyfills": [
+              "@angular/localize/init"
             ]
           }
         }
